<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/inAppReviewPromptRoot"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/smallMargin"
  android:orientation="vertical"
  app:cardCornerRadius="@dimen/promptCornerRadius">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/reviewPromptImage"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/reviewPromptImageHeight"
      android:layout_margin="@dimen/defaultMargin"
      android:src="@drawable/android_love"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/reviewPromptTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/defaultMargin"
      android:gravity="center_horizontal"
      android:text="@string/inAppReviewTitle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reviewPromptImage" />

    <TextView
      android:id="@+id/reviewPromptText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/defaultMargin"
      android:gravity="center_horizontal"
      android:text="@string/inAppReviewMessage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reviewPromptTitle" />

    <androidx.cardview.widget.CardView
      android:id="@+id/leaveReviewCard"
      android:layout_width="0dp"
      android:layout_height="@dimen/buttonSize"
      android:layout_marginHorizontal="@dimen/defaultMargin"
      android:layout_marginVertical="@dimen/smallMargin"
      app:cardCornerRadius="@dimen/promptCornerRadius"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reviewPromptText">

      <TextView
        android:id="@+id/leaveReview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/inAppReviewRateNow" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/reviewLaterCard"
      android:layout_width="0dp"
      android:layout_height="@dimen/buttonSize"
      android:layout_marginHorizontal="@dimen/defaultMargin"
      android:layout_marginVertical="@dimen/smallMargin"
      app:cardCornerRadius="@dimen/promptCornerRadius"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/leaveReviewCard">

      <TextView
        android:id="@+id/reviewLater"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/inAppReviewRateLater" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/reviewNeverCard"
      android:layout_width="0dp"
      android:layout_height="@dimen/buttonSize"
      android:layout_marginHorizontal="@dimen/defaultMargin"
      android:layout_marginTop="@dimen/smallMargin"
      android:layout_marginBottom="@dimen/defaultMargin"
      app:cardCornerRadius="@dimen/promptCornerRadius"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reviewLaterCard">

      <TextView
        android:id="@+id/reviewNever"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/inAppReviewRateNever" />
    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>